[package]
name = "rpi0_plant_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.3.2"
embedded-hal = "0.2.7"
bme280 = "0.2.1"

tokio = { version = "1.17.0" , features = ["sync", "rt", "macros","time"] }
paho-mqtt = "0.10.0"
futures-util = "0.3.21"

toml = "0.5.8"
serde = "1.0.97"
serde_derive = "1.0"


openssl = { version = "0.10.29", features = ["vendored"] }