[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0" , features = ["sync", "rt", "macros","time"] }
paho-mqtt = "0.10.0"
futures-util = "0.3.21"

serde = "1.0.97"
toml = "0.5.8"
serde_derive = "1.0"
serde_json = "1.0"
